--- a/Week_1.ipynb
+++ b/Week_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "oWgmiBshH3uI"
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -125,8 +125,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140046127916080\n",
-      "140046127917808\n"
+      "140103687128192\n",
+      "140103687128432\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "id": "CsM8ljEqZgH1"
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "id": "yoFjUwY4ZsPe"
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -511,7 +511,16 @@
     "id": "YC8Wb-QjdXUw",
     "outputId": "007cd392-7d39-4820-a47f-272a0f1a974f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hcsarker2002@gmail.com\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "email = input(\"Please Enter Your Email : \")\n",
     "password = input(\"Please Enter your pass : \")\n",
@@ -522,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -545,11 +554,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your first number : 3\n",
-      "Enter your second number: 3\n",
       "<class 'int'>\n",
       "<class 'int'>\n",
-      "6\n"
+      "9\n"
      ]
     }
    ],
@@ -617,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -663,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -711,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -757,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -795,7 +802,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -891,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -930,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -953,8 +960,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number which is must be less than 10: 3\n",
-      "number is less than 5\n"
+      "number is grater than 5\n"
      ]
     }
    ],
@@ -973,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1014,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "-gQSOG05jZ8d"
    },
@@ -1040,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1065,7 +1071,7 @@
        "389879808"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1101,12 +1107,22 @@
      "text": [
       "16\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(len(fb))\n",
     "\n",
-    "0 - (16-1)=15"
+    "0 - (16-1)==15"
    ]
   },
   {
@@ -1139,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "39P3BpLTtLbE"
    },
@@ -1151,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1184,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1206,14 +1222,11 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
       "text/plain": [
        "'pandas'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1250,7 +1263,7 @@
        "['pandas', 'kao', 'hello', False, 3.14]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1287,7 +1300,7 @@
        "['Python', 'pandas', 'kao', 'hello', False, 3.14]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "Qqodrq6Lti44"
    },
@@ -1312,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1335,7 +1348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 'kao', 'hello', False, 3.14, 'Bangladesh']\n"
+      "20\n"
      ]
     }
    ],
@@ -1345,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "uABK81oRy5A7"
    },
@@ -1356,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1378,14 +1391,11 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
       "text/plain": [
        "'welcome'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1709,7 +1719,7 @@
        "9        1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1747,7 +1757,7 @@
        "(7197, 16)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1846,7 +1856,7 @@
        "  '1']]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1857,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1895,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1920,7 +1930,7 @@
        "0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -9174,7 +9184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -9214,7 +9224,7 @@
        " '1']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9225,7 +9235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -16463,7 +16473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "executionInfo": {
      "elapsed": 12,
@@ -16494,7 +16504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -16529,7 +16539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "id": "pJs6KGWqbFs8"
    },
@@ -16550,7 +16560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -16585,7 +16595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "id": "_mVwOYVWg1lW"
    },
@@ -16603,7 +16613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -16628,7 +16638,7 @@
        "3.526955675976101"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
