--- a/Test/cc.ipynb
+++ b/Test/cc.ipynb
@@ -20,6 +20,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "dfdb7135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "print(sns.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "19bbb4b0",
    "metadata": {},
