--- a/Week_1.ipynb
+++ b/Week_1.ipynb
@@ -16595,11 +16595,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "id": "_mVwOYVWg1lW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'apps_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m total_ratings = \u001b[32m0\u001b[39m\n\u001b[32m      3\u001b[39m apps_count = \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m app \u001b[38;5;129;01min\u001b[39;00m \u001b[43mapps_data\u001b[49m[\u001b[32m1\u001b[39m:]:\n\u001b[32m      6\u001b[39m   rating = \u001b[38;5;28mfloat\u001b[39m(app[\u001b[32m7\u001b[39m])\n\u001b[32m      7\u001b[39m   total_ratings = total_ratings + rating\n",
+      "\u001b[31mNameError\u001b[39m: name 'apps_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# apps average rating\n",
     "total_ratings = 0\n",
