--- a/Test/cc.ipynb
+++ b/Test/cc.ipynb
@@ -205,11 +205,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3000d844",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying size: 1 x 1\n",
+      "Trying size: 2 x 2\n",
+      "Trying size: 4 x 4\n",
+      "Trying size: 8 x 8\n",
+      "Trying size: 16 x 16\n",
+      "Trying size: 32 x 32\n",
+      "Trying size: 64 x 64\n",
+      "Trying size: 128 x 128\n",
+      "Trying size: 256 x 256\n",
+      "Trying size: 512 x 512\n",
+      "Trying size: 1024 x 1024\n",
+      "Trying size: 2048 x 2048\n",
+      "Trying size: 4096 x 4096\n",
+      "Trying size: 8192 x 8192\n",
+      "Trying size: 16384 x 16384\n",
+      "Trying size: 32768 x 32768\n",
+      "Trying size: 65536 x 65536\n",
+      "Maximum 2D matrix size: 32768 x 32768\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "try:\n",
+    "    size = 1\n",
+    "    while True:\n",
+    "        print(f\"Trying size: {size} x {size}\")\n",
+    "        arr = np.zeros((size, size), dtype=np.float64)\n",
+    "        size *= 2\n",
+    "except MemoryError:\n",
+    "    print(f\"Maximum 2D matrix size: {size//2} x {size//2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ce969349",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying size: 1000000\n",
+      "Trying size: 2000000\n",
+      "Trying size: 4000000\n",
+      "Trying size: 8000000\n",
+      "Trying size: 16000000\n",
+      "Trying size: 32000000\n",
+      "Trying size: 64000000\n",
+      "Trying size: 128000000\n",
+      "Trying size: 256000000\n",
+      "Trying size: 512000000\n",
+      "Trying size: 1024000000\n",
+      "Trying size: 2048000000\n",
+      "Trying size: 4096000000\n",
+      "Trying size: 8192000000\n",
+      "Maximum 1D array size: 4096000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    size = 10**6\n",
+    "    while True:\n",
+    "        print(f\"Trying size: {size}\")\n",
+    "        arr = np.zeros(size, dtype=np.float64)\n",
+    "        size *= 2\n",
+    "except MemoryError:\n",
+    "    print(f\"Maximum 1D array size: {size//2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "abe4f0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775807\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.maxsize)\n"
+   ]
   }
  ],
  "metadata": {
