--- a/practice_algthm/sgd_mf.ipynb
+++ b/practice_algthm/sgd_mf.ipynb
@@ -2234,7 +2234,8 @@
       "Epoch 1/40 - train RMSE: 0.25037, val RMSE: 0.21995\n",
       "Epoch 5/40 - train RMSE: 0.20192, val RMSE: 0.20306\n",
       "Epoch 10/40 - train RMSE: 0.20005, val RMSE: 0.20177\n",
-      "Epoch 15/40 - train RMSE: 0.19964, val RMSE: 0.20152\n"
+      "Epoch 15/40 - train RMSE: 0.19964, val RMSE: 0.20152\n",
+      "Epoch 20/40 - train RMSE: 0.19949, val RMSE: 0.20131\n"
      ]
     }
    ],
