--- a/anime_recomender.ipynb
+++ b/anime_recomender.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8c2d160e",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,9 @@
      "output_type": "stream",
      "text": [
       "Val MAE (original): 0.9159\n",
-      "Val R² (original): 0.4133\n"
+      "Val R² (original): 0.4133\n",
+      "Train MAE (original): 0.9020\n",
+      "Train R² (original): 0.4303\n"
      ]
     }
    ],
@@ -644,10 +646,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb2038be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8340, Precision: 0.9075, Recall: 0.8895, F1: 0.8984, AUC: 0.8362\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "\n",
