Refactor code structure for improved readability and maintainability

--- a/AI_sessional/Search_alg/dfs.ipynb
+++ b/AI_sessional/Search_alg/dfs.ipynb
@@ -19,13 +19,12 @@
     "        for neighbor in graph[node]:\n",
     "            dfs(graph, neighbor, visited, result)   # Recursive call\n",
     "\n",
-    "    return result\n",
-    "\n"
+    "    return result "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f560a24f",
    "metadata": {},
    "outputs": [
@@ -38,7 +37,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Example graph (Adjacency List)\n",
     "graph = {\n",
     "    'A': ['B', 'C'],\n",
@@ -48,9 +46,8 @@
     "    'E': ['B', 'F'],\n",
     "    'F': ['C', 'E']\n",
     "}\n",
-    "\n",
     "# Run DFS\n",
-    "print(\"DFS Traversal:\", dfs(graph, 'A'))\n"
+    "print(\"DFS Traversal:\", dfs(graph, 'A'))"
    ]
   }
  ],
@@ -70,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
